--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,7 @@
     ] }],
     "rules": {
         "react/button-has-type": "off",
+        "import/no-extraneous-dependencies": "warn",
         "jsx-a11y/click-events-have-key-events": "off",
         "jsx-a11y/no-static-element-interactions": "off",
         "import/order": [
