added an ability to get data about a movie

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -91,6 +91,12 @@
                 "self"
             ]
         }],
+        "prettier/prettier": [
+            "warn",
+            {
+                "endOfLine": "auto"
+            }
+        ],
         "react/display-name": "off",
         "react/react-in-jsx-scope": "off",
         "react/require-default-props": "off",
